--- a/StudentPersonalAccount/App.xaml
+++ b/StudentPersonalAccount/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:StudentPersonalAccount"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="StudentPersonalAccount.App"
-             StartupUri="Windows/Authentication.xaml">
+             StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
