--- a/StudentPersonalAccount/Themes/TextBoxTheme.xaml
+++ b/StudentPersonalAccount/Themes/TextBoxTheme.xaml
@@ -5,8 +5,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="10" Background="#196C94"
-                            Height="250" Width="40">
+                    <Border CornerRadius="10" 
+                            Background="#196C94"
+                            Width="200" Height="40">
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
                             <TextBox Margin="1"
