--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -24,7 +24,7 @@
 
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Background="#FF4DB1E3" Orientation="Horizontal">
+        <StackPanel Background="#FF38A0D4" Orientation="Horizontal">
             <Label Content="Personal account" Foreground="#DDFFFFFF" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Background="#FF4DB1E3">
@@ -32,8 +32,16 @@
             <RadioButton Content="Home" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14"/>
             <RadioButton Content="Profile" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Background="#FF4DB1E3" Orientation="Horizontal">
-            <TextBox Width="250" Height="40" Margin="5" VerticalAlignment="Center" HorizontalContentAlignment="Left"/>
+        <StackPanel Grid.Column="1" Background="#FF38A0D4" Orientation="Horizontal">
+            <TextBox
+                Style="{StaticResource MaterialDesignFilledTextBox}"
+                VerticalAlignment="Center"
+                Height="40"
+                materialDesign:HintAssist.Hint="Search"
+                IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignFilledTextBoxEnabledComboBox}"
+                Padding="10,5,5,5" VerticalContentAlignment="Center" Width="200" HorizontalAlignment="Left" 
+                Margin="50,0,0,0" Foreground="White" BorderBrush="#28FFFFFF" SelectionTextBrush="White" Background="#FF4DB1E3" 
+                CaretBrush="White" materialDesign:HintAssist.Foreground="White" materialDesign:TextFieldAssist.UnderlineBrush="White" FlowDirection="LeftToRight"/>
         </StackPanel>
     </Grid>
 </Window>
