--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -43,5 +43,7 @@
                 Margin="50,0,0,0" Foreground="White" BorderBrush="#28FFFFFF" SelectionTextBrush="White" Background="#FF4DB1E3" 
                 CaretBrush="White" materialDesign:HintAssist.Foreground="White" materialDesign:TextFieldAssist.UnderlineBrush="White" FlowDirection="LeftToRight"/>
         </StackPanel>
+
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="10"/>
     </Grid>
 </Window>
