--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -10,10 +10,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:viewModel="clr-namespace:StudentPersonalAccount.MVVM.ViewModel"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentPersonalAccount.Windows"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="900" WindowStartupLocation="CenterScreen">
+
+    <Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -44,6 +50,6 @@
                 CaretBrush="White" materialDesign:HintAssist.Foreground="White" materialDesign:TextFieldAssist.UnderlineBrush="White" FlowDirection="LeftToRight"/>
         </StackPanel>
 
-        <ContentControl Grid.Row="1" Grid.Column="1" Margin="10"/>
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="10" Content="{Binding CurrentView}"/>
     </Grid>
 </Window>
