--- a/StudentPersonalAccount/App.xaml
+++ b/StudentPersonalAccount/App.xaml
@@ -2,10 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:StudentPersonalAccount"
-             xmlns:viewModel="clr-namespace:StudentPersonalAccount.MVVM.ViewModel"
              xmlns:view="clr-namespace:StudentPersonalAccount.MVVM.View"    
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="StudentPersonalAccount.App"
-             StartupUri="Windows/MainWindow.xaml">
+             StartupUri="Windows/Authentication.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,9 +16,6 @@
                 <materialDesign:CustomColorTheme x:Name="x_DarkBlue" PrimaryColor="#FF0077BE" SecondaryColor="#FF3F8300" InvalidatesImplicitDataTemplateResources="True"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
-                <view:HomeView/>
-            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
