--- a/StudentPersonalAccount/MVVM/View/ProfileView.xaml
+++ b/StudentPersonalAccount/MVVM/View/ProfileView.xaml
@@ -16,11 +16,11 @@
     <StackPanel>
         <TextBlock Foreground="Black" Text="Profile" FontSize="22"/>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Stretch">
-            <TextBox x:Name="secondNameTextBox" Text="Second name" Width="200" />
-            <TextBox x:Name="firstNameTextBox" Text="First name" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="lastNameTextBox" Text="Last name" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="groupNumberTextBox" Text="Group number" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="phoneTextBox" Text="Phone" Width="200" Margin="0,10,0,0" />
+            <TextBox x:Name="secondNameTextBox" materialDesign:HintAssist.Hint="Second name" Width="200" />
+            <TextBox x:Name="firstNameTextBox" materialDesign:HintAssist.Hint="First name" Width="200" Margin="0,10,0,0" />
+            <TextBox x:Name="lastNameTextBox" materialDesign:HintAssist.Hint="Last name" Width="200" Margin="0,10,0,0" />
+            <TextBox x:Name="groupNumberTextBox" materialDesign:HintAssist.Hint="Group number" Width="200" Margin="0,10,0,0" />
+            <TextBox x:Name="phoneTextBox" materialDesign:HintAssist.Hint="Phone" Width="200" Margin="0,10,0,0" />
             <Button x:Name="saveButton" Content="Button" Margin="0,50,0,0" Click="saveButton_Click"/>
         </StackPanel>
     </StackPanel>
