--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -30,10 +30,10 @@
         </StackPanel>
         <StackPanel Grid.Row="1" Background="#FF4DB1E3">
             <RadioButton x:Name="homeButton" Content="Home" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14" 
-                         Command="{Binding HomeViewCommand}" IsChecked="True" Click="homeButton_Click"/>
-            <RadioButton Content="Home" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14"/>
+                         Command="{Binding HomeViewCommand}" IsChecked="True" Click="homeButton_Click" Cursor="Hand"/>
+            <RadioButton Content="Home" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14" Cursor="Hand"/>
             <RadioButton x:Name="profileButton" Content="Profile" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14"
-                         Command="{Binding ProfileViewCommand}" Click="profileButton_Click"/>
+                         Command="{Binding ProfileViewCommand}" Click="profileButton_Click" Cursor="Hand"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Background="#FF38A0D4" Orientation="Horizontal">
             <TextBox
