--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -26,7 +26,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Background="#FF38A0D4" Orientation="Horizontal">
-            <Label Content="Personal account" Foreground="#DDFFFFFF" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0"/>
+            <Label x:Name="title" Content="Personal account" Foreground="#DDFFFFFF" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Background="#FF4DB1E3">
             <RadioButton x:Name="homeButton" Content="Home" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14" 
@@ -35,18 +35,23 @@
             <RadioButton x:Name="profileButton" Content="Profile" Height="50" Foreground="White" Style="{StaticResource MenuButtonTheme}" FontSize="14"
                          Command="{Binding ProfileViewCommand}" Click="profileButton_Click" Cursor="Hand"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Background="#FF38A0D4" Orientation="Horizontal">
-            <TextBox
-                Style="{StaticResource MaterialDesignFilledTextBox}"
-                VerticalAlignment="Center"
-                Height="40"
-                materialDesign:HintAssist.Hint="Search"
-                IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignFilledTextBoxEnabledComboBox}"
-                Padding="10,5,5,5" VerticalContentAlignment="Center" Width="200" HorizontalAlignment="Left" 
-                Margin="50,0,0,0" Foreground="White" BorderBrush="#28FFFFFF" SelectionTextBrush="White" Background="#FF4DB1E3" 
-                CaretBrush="White" materialDesign:HintAssist.Foreground="White" materialDesign:TextFieldAssist.UnderlineBrush="White" FlowDirection="LeftToRight"/>
-        </StackPanel>
-
+        <Grid Grid.Column="1" Background="#FF38A0D4">
+            <TextBox Style="{StaticResource MaterialDesignFilledTextBox}"
+                    VerticalAlignment="Center"
+                    Height="40"
+                    materialDesign:HintAssist.Hint="Search"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignFilledTextBoxEnabledComboBox}"
+                    Padding="10,5,5,5" VerticalContentAlignment="Center" Width="200" HorizontalAlignment="Left" 
+                    Margin="50,0,0,0" Foreground="White" BorderBrush="#28FFFFFF" SelectionTextBrush="White" Background="#FF4DB1E3" 
+                    CaretBrush="White" materialDesign:HintAssist.Foreground="White" materialDesign:TextFieldAssist.UnderlineBrush="White" FlowDirection="LeftToRight"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="40" Margin="0,0,10,0">
+                    <Label x:Name="FSNameLabel" Content="FSL" HorizontalAlignment="Right" Foreground="#DDFFFFFF" FlowDirection="RightToLeft" FontSize="12"/>
+                    <Label x:Name="GNLabel" Content="GN" HorizontalAlignment="Right" Foreground="#DDFFFFFF" FlowDirection="RightToLeft" FontSize="12"/>
+                </StackPanel>
+                <Image Height="40" Width="40" HorizontalAlignment="Right" Margin="0,0,20,0" Cursor="Hand" Source="/Windows/user.png"/>
+            </StackPanel>            
+        </Grid>
         <ContentControl x:Name="mainControl" Grid.Row="1" Grid.Column="1" Margin="10"/>
     </Grid>
 </Window>
