Change profile image system

--- a/StudentPersonalAccount/Windows/MainWindow.xaml
+++ b/StudentPersonalAccount/Windows/MainWindow.xaml
@@ -50,7 +50,11 @@
                     <Label x:Name="FSNameLabel" Content="User name" HorizontalAlignment="Right" Foreground="#DDFFFFFF" FlowDirection="RightToLeft" FontSize="12" Padding="4,8,4,0" FontWeight="Bold"/>
                     <Label x:Name="GNLabel" Content="Group number" HorizontalAlignment="Right" Foreground="#DDFFFFFF" FlowDirection="RightToLeft" FontSize="12" Padding="4,0,4,4" FontWeight="Thin"/>
                 </StackPanel>
-                <Image x:Name="profileImage" Height="40" Width="40" HorizontalAlignment="Right" Margin="0,0,20,0" Cursor="Hand" Source="/Windows/user.png" MouseLeftButtonDown="profileImage_MouseLeftButtonDown"/>
+                <Ellipse x:Name="profileImageEllipse" Width="50" Height="50" Margin="0,0,20,0" MouseLeftButtonDown="profileImage_MouseLeftButtonDown" Cursor="Hand">
+                    <Ellipse.Fill>
+                        <ImageBrush x:Name="profileImage" ImageSource="/Windows/user.png" />
+                    </Ellipse.Fill>
+                </Ellipse>
             </StackPanel>            
         </Grid>
         <ContentControl x:Name="mainControl" Grid.Row="1" Grid.Column="1" Margin="10"/>
