--- a/StudentPersonalAccount/MVVM/View/ProfileView.xaml
+++ b/StudentPersonalAccount/MVVM/View/ProfileView.xaml
@@ -15,13 +15,20 @@
             d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
         <TextBlock Foreground="Black" Text="Profile" FontSize="22"/>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Stretch">
-            <TextBox x:Name="secondNameTextBox" materialDesign:HintAssist.Hint="Second name" Width="200" />
-            <TextBox x:Name="firstNameTextBox" materialDesign:HintAssist.Hint="First name" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="lastNameTextBox" materialDesign:HintAssist.Hint="Last name" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="groupNumberTextBox" materialDesign:HintAssist.Hint="Group number" Width="200" Margin="0,10,0,0" />
-            <TextBox x:Name="phoneTextBox" materialDesign:HintAssist.Hint="Phone" Width="200" Margin="0,10,0,0" />
-            <Button x:Name="saveButton" Content="Button" Margin="0,50,0,0" Click="saveButton_Click"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Stretch">
+            <Ellipse x:Name="profileImageEllipse" Width="150" Height="150" Margin="0,0,100,0" MouseLeftButtonDown="profileImage_MouseLeftButtonDown" Cursor="Hand" VerticalAlignment="Top" Stroke="#FF2196F3">
+                <Ellipse.Fill>
+                    <ImageBrush x:Name="profileImage" ImageSource="/Windows/user.png" TileMode="Tile"/>
+                </Ellipse.Fill>
+            </Ellipse>
+            <StackPanel>
+                <TextBox x:Name="secondNameTextBox" materialDesign:HintAssist.Hint="Second name" Width="200" />
+                <TextBox x:Name="firstNameTextBox" materialDesign:HintAssist.Hint="First name" Width="200" Margin="0,10,0,0" />
+                <TextBox x:Name="lastNameTextBox" materialDesign:HintAssist.Hint="Last name" Width="200" Margin="0,10,0,0" />
+                <TextBox x:Name="groupNumberTextBox" materialDesign:HintAssist.Hint="Group number" Width="200" Margin="0,10,0,0" />
+                <TextBox x:Name="phoneTextBox" materialDesign:HintAssist.Hint="Phone" Width="200" Margin="0,10,0,0" />
+                <Button x:Name="saveButton" Content="Button" Margin="0,50,0,0" Click="saveButton_Click"/>
+            </StackPanel>
         </StackPanel>
     </StackPanel>
 </UserControl>
