--- a/StudentPersonalAccount/MVVM/View/HomeView.xaml
+++ b/StudentPersonalAccount/MVVM/View/HomeView.xaml
@@ -15,5 +15,218 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
         <TextBlock Foreground="Black" Text="Home" FontSize="22"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-7,0,0,0">
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-7,20,0,0">
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-7,20,0,0">
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card
+                Background="{DynamicResource PrimaryHueLightBrush}"
+                Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+                Width="200"
+                Padding="8" Margin="20,0,0,0">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="16"
+                        Text="Информация" />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Новости" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Сессия" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                    <TextBlock
+                        FontSize="12"
+                        Text="Дистанционное обучение" HorizontalAlignment="Left" Margin="40,20,0,0"
+                        />
+                </StackPanel>
+            </materialDesign:Card>
+        </StackPanel>
     </StackPanel>
 </UserControl>
