--- a/StudentPersonalAccount/App.xaml
+++ b/StudentPersonalAccount/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:StudentPersonalAccount"
-             xmlns:view="clr-namespace:StudentPersonalAccount.MVVM.View"    
+             xmlns:view="clr-namespace:StudentPersonalAccount.View"    
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="StudentPersonalAccount.App"
              StartupUri="Windows/IdentifyWindow.xaml">
     <Application.Resources>
