--- a/StudentPersonalAccount/View/AuthenticationView.xaml
+++ b/StudentPersonalAccount/View/AuthenticationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="StudentPersonalAccount.MVVM.View.AuthenticationView"
+﻿<UserControl x:Class="StudentPersonalAccount.View.AuthenticationView"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
