--- a/StudentPersonalAccount/View/ProfileView.xaml
+++ b/StudentPersonalAccount/View/ProfileView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="StudentPersonalAccount.MVVM.View.ProfileView"
+﻿<UserControl x:Class="StudentPersonalAccount.View.ProfileView"
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
             TextElement.FontWeight="Regular"
@@ -10,7 +10,7 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-            xmlns:local="clr-namespace:StudentPersonalAccount.MVVM.View"
+            xmlns:local="clr-namespace:StudentPersonalAccount.View"
             mc:Ignorable="d" 
             d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
