--- a/StudentPersonalAccount/View/RegistrationView.xaml
+++ b/StudentPersonalAccount/View/RegistrationView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="StudentPersonalAccount.MVVM.View.RegistrationView"
+﻿<UserControl x:Class="StudentPersonalAccount.View.RegistrationView"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
